--- a/ProgressTerraTask/Properties/launchSettings.json
+++ b/ProgressTerraTask/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     "anonymousAuthentication": true
   },
   "profiles": {
-    "ProgressTerraTask": {
+    "ProgressTerraTaskDev": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
@@ -13,6 +13,16 @@
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "ProgressTerraTaskProd": {
+      "commandName": "Project",
+      "dotnetRunMessages": "true",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
